--- a/client/src/components/ExploreMenu.css
+++ b/client/src/components/ExploreMenu.css
@@ -4,10 +4,15 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background-color: #f9f9f9;
+  background-color: #EEF7FF; /* Light background color from the palette */
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.explore{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .explore-menu h1 {
@@ -15,7 +20,7 @@
   font-size: 36px;
   font-weight: bold;
   margin-bottom: 10px;
-  background-color: #e4bbb4;
+  background-color: #7AB2B2; /* Color from the palette */
   border-radius: 10px;
   padding: 5px;
   max-width: 45%;
@@ -36,27 +41,27 @@
   padding-bottom: 10px;
 }
 
-
 @keyframes slideIn {
-    from {
-      transform: translateX(-100%); /* Start off-screen to the left */
-      opacity: 0;
-    }
-    to {
-      transform: translateX(0); /* End position at the final position */
-      opacity: 1;
-    }
+  from {
+    transform: translateX(-100%); /* Start off-screen to the left */
+    opacity: 0;
   }
+  to {
+    transform: translateX(0); /* End position at the final position */
+    opacity: 1;
+  }
+}
+
 .explore-menu-list-items {
   display: flex;
   flex-direction: column;
   align-items: center;
   cursor: pointer;
   transition: transform 0.2s ease;
-  background-color: #fff;
-  border-radius: 8px;
+  /* background-color: #fff; */
+  /* border-radius: 8px; */
   padding: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
 
 .explore-menu-list-items:hover {
@@ -79,9 +84,21 @@
 }
 
 .explore-menu-list-items .active {
-  border: 4px solid #ff6347; /* Tomato color */
+  border: 4px solid #4D869C; /* Color from the palette */
 }
 
+@media (max-width:860px) {
+    .explore h1{font-size: 20px;}
+    .explore-menu-text{
+      font-size: 15px;
+    }
+}
+@media (max-width:446px) {
+  .explore h1{font-size: 12px;}
+  .explore-menu-text{
+    font-size: 10px;
+  }
+}
 /* Scrollbar customization */
 ::-webkit-scrollbar {
   width: 8px;
@@ -117,7 +134,7 @@
 
 .video-item video {
   width: 100%;
-  height: auto;
+  /* height: auto; */
   border-radius: 10px 10px 0 0;
 }
 
@@ -129,8 +146,8 @@
   margin-bottom: 0;
 }
 
-@media (min-width:1025px) {
-    .explore-menu h1 {
-        max-width: 65%;
-      }
+@media (min-width: 1025px) {
+  .explore-menu h1 {
+    max-width: 65%;
+  }
 }
